# flood-detection-dl

./: .gitignore  .gitmodules  Makefile  README.md  main.py  pyproject.toml
docs/: 1-s2.0-S1569843223004594-main.md  documentation.md  remotesensing-16-00656-v2.md
fddl/: pyproject.toml
fddl/src/fddl/: __init__.py
notebooks/: download_from_gee.ipynb
scripts/: dl_sen12flood.py  dl_sen1floods11.py  normalize_pdf_names.sh
