[project]
name = "flood-detection-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=78.1.0",
]

[project.optional-dependencies]
gee = [
    "earthengine-api>=1.5.9",
    "geemap>=0.35.3",
]

[tool.uv.workspace]
members = ["fddl"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
